Status display now displays default icon by default instead of blank screen

--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -511,7 +511,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                 <b> ALERT!</b>:
             </div>
             <div class="itemContent">
-                {{:helper.link('None', 'alert', {'cartmenu' : "1", 'choice' : "Status",'statdisp' : "alert", 'alert' : "default"}, null, null)}}
+                {{:helper.link('Default', 'gear', {'cartmenu' : "1", 'choice' : "Status",'statdisp' : "default"}, null, null)}}
                 {{:helper.link('Red Alert', 'alert', {'cartmenu' : "1", 'choice' : "Status",'statdisp' : "alert", 'alert' : "redalert"}, null, null)}}
                 {{:helper.link('Lockdown', 'caution', {'cartmenu' : "1", 'choice' : "Status",'statdisp' : "alert", 'alert' : "lockdown"}, null, null)}}
                 {{:helper.link('Biohazard', 'radiation', {'cartmenu' : "1", 'choice' : "Status",'statdisp' : "alert", 'alert' : "biohazard"}, null, null)}}
