--- a/code/modules/goonchat/browserassets/css/browserOutput.css
+++ b/code/modules/goonchat/browserassets/css/browserOutput.css
@@ -144,6 +144,7 @@ a.popt {text-decoration: none;}
 	line-height: 30px;
 	float: left;
 	margin-left: 5px;
+	font-size: 0.85em;
 }
 
 #userBar .sub i {
