--- a/code/modules/goonchat/browserassets/css/browserOutput.css
+++ b/code/modules/goonchat/browserassets/css/browserOutput.css
@@ -285,6 +285,7 @@ h1.alert, h2.alert	{color: #000000;}
 .emote					{font-style: italic;}
 .selecteddna			{color: #FFFFFF; 	background-color: #001B1B}
 .artefact				{color: #ffa500;}
+.electronicblue		{color: #00BFFF; background-color: #414141}
 
 /* Radio Channels */
 .comradio				{color: #193A7A;}
