--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -3,6 +3,7 @@
 Title: PDA UI
 Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
  -->
+
 {{if data.owner}}
 	<div class="item">
 		<div class="itemLabelNarrow">
@@ -21,7 +22,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
 			<b>Station Time</b>:
 		</div>
 		<div class="itemContent">
-			<span class="average">{{:data.stationTime}}&emsp;[{{:data.securityLevel}}]</span>
+			<span class="average">{{:data.stationTime}}</span>
 		</div>
 	</div>
     {{if data.shuttle_eta}}
@@ -80,7 +81,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                 {{:helper.link('Messenger', data.new_Message ? 'mail-closed' : 'mail-open', {'choice' : "2"}, null, 'fixedLeftWide')}}
                 {{:helper.link('Crew Manifest', 'contact', {'choice' : "41"}, null, 'fixedLeftWide')}}
 				<!-- {{:helper.link('News', data.new_News ? 'mail-closed' : 'mail-open', {'choice' : "6"}, null, 'fixedLeftWide')}} -->
-				{{:helper.link('Finance Management', 'note', {'choice' : "7"}, null, 'fixedLeftWide')}}
+				{{:helper.link('Finance Management', 'suitcase', {'choice' : "Finance"}, null, 'fixedLeftWide')}}
             </div>
         </div>
         <br>
@@ -312,66 +313,79 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                     <tr><th colspan="4" class="command">Command</th></tr>
                     {{for data.cached["heads"]}}
                         {{if value.rank == "Captain"}}
-                            <tr><td>{{:value.account}}</td><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
                         {{else}}
-                            <tr><td>{{:value.account}}</td><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                         {{/if}}
                     {{/for}}
                 {{/if}}
                 {{if data.cached.sec.length}}
-                    <tr><th colspan="3" class="sec">Security</th></tr>
+                    <tr><th colspan="4" class="sec">Security</th></tr>
                     {{for data.cached["sec"]}}
                         {{if value.rank == "Head of Security"}}
-                            <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
                         {{else}}
-                            <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                         {{/if}}
                     {{/for}}
                 {{/if}}
                 {{if data.cached.eng.length}}
-                    <tr><th colspan="3" class="eng">Engineering</th></tr>
+                    <tr><th colspan="4" class="eng">Engineering</th></tr>
                     {{for data.cached["eng"]}}
                         {{if value.rank == "Chief Engineer"}}
-                            <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
                         {{else}}
-                            <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                         {{/if}}
                     {{/for}}
                 {{/if}}
                 {{if data.cached.med.length}}
-                    <tr><th colspan="3" class="med">Medical</th></tr>
+                    <tr><th colspan="4" class="med">Medical</th></tr>
                     {{for data.cached["med"]}}
                         {{if value.rank == "Chief Medical Officer"}}
-                            <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
                         {{else}}
-                            <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                         {{/if}}
                     {{/for}}
                 {{/if}}
                 {{if data.cached.sci.length}}
-                    <tr><th colspan="3" class="sci">Science</th></tr>
+                    <tr><th colspan="4" class="sci">Science</th></tr>
                     {{for data.cached["sci"]}}
                         {{if value.rank == "Research Director"}}
-                            <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
                         {{else}}
-                            <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                         {{/if}}
                     {{/for}}
                 {{/if}}
                 {{if data.cached.civ.length}}
-                    <tr><th colspan="3" class="civ">Civilian</th></tr>
+                    <tr><th colspan="4" class="civ">Civilian</th></tr>
                     {{for data.cached["civ"]}}
                         {{if value.rank == "Head of Personnel"}}
-                            <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
                         {{else}}
-                            <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                            <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                            <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                         {{/if}}
                     {{/for}}
                 {{/if}}
                 {{if data.cached.misc.length}}
-                    <tr><th colspan="3" class="misc">Misc</th></tr>
+                    <tr><th colspan="4" class="misc">Misc</th></tr>
                     {{for data.cached["misc"]}}
-                        <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                        <tr><td>{{:helper.link('Send Money', null, {'choice' : "Send Money", 'account' : value.account}, null, null)}}</td>
+                        <td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
                     {{/for}}
                 {{/if}}
             </tbody></table></center>
@@ -1009,43 +1023,55 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
             </div>
         </div> -->
 	
-	{{else data.mode == 7}} <!-- Money -->
-	<H2>Finance Management</H2>
-	<div class="item">
-		<div class="itemContent" style="width: 100%;"><span class="good"><b>Account balance:</b></span> <span class="average">{{:data.money}}$</span></div>
-		<div class="itemContent">{{:helper.link('Change account security level', 'gear', {'choice' : "71"}, null, null)}}</div>
-		<div class="itemContent">{{:helper.link('Make transfer', 'gear', {'choice' : "72"}, null, null)}}</div>
-		<div class="itemContent">{{:helper.link('View transaction log', 'gear', {'choice' : "73"}, null, null)}}</div>
-	</div>
-	{{else data.mode == 71}} <!-- Change account security level -->
-	<div class="item">
-		<div class="itemContent" style="width: 100%;">
-			No!!!
-		</div>
-	</div>
-	{{else data.mode == 72}} <!-- Make transfer -->
-	<div class="item">
-		<div class="itemContent" style="width: 100%;"><span class="good"><b>Account balance:</b></span> <span class="average">{{:data.money}}$</span></div>
-		<table>
-			<tr><td>Target account number:</td><td><span class="average">{{:data.target_account_number}}</span></td>
-			<td><div class="itemContent">{{:helper.link('change', null, {'choice' : "target_acc_number"}, null, null)}}</div></td></tr>
-			<tr><td>Funds to transfer:</td><td><span class="average">{{:data.funds_amount}}</span></td>
-			<td><div class="itemContent">{{:helper.link('change', null, {'choice' : "funds_amount"}, null, null)}}</div></td></tr>
-			<tr><td>Transaction purpose:</td><td><span class="average">{{:data.purpose}}</span></td>
-			<td><div class="itemContent">{{:helper.link('change', null, {'choice' : "purpose"}, null, null)}}</div></td></tr>
-		</table>
-		<div class="itemContent">{{:helper.link('Transfer funds', 'gear', {'choice' : "make_transfer"}, null, null)}}</div>
-	</div>
-	{{else data.mode == 73}} <!-- View transaction log -->
-	<div class="item">
-		<div class="itemContent" style="width: 100%;">
-			{{:data.trans_log}}
-		</div>
-	</div>
+    {{else data.mode == 7}} <!-- Finance Management -->
+        <div class="item">
+            <H2>Finance Management</H2>
+            <div class="itemLabelNarrow"><b>Money:</b></div>
+            <div class="itemContent"><span class="good">{{:data.money}}$</span></div> <!--<font color = '#32cd32' ></font></H2>-->
+        </div>
+        <div class="item">
+            <div class="itemLabelNarrow">
+                <b>Functions:</b>
+            </div>
+            <div class="itemContent">
+                {{:helper.link('Transaction Menu', data.trans_menu == 1 ? 'circle-arrow-n' : 'circle-arrow-s', {'choice' : "Transaction Menu"}, null, 'fixedLeftWide')}}
+                {{:helper.link('Transaction Log', data.trans_log_spoiler == 1 ? 'circle-arrow-n' : 'circle-arrow-s', {'choice' : "Transaction Log"}, null, 'null')}}
+            </div>
+        </div>
+        {{if data.trans_menu == 1}} <!-- Show Transaction Menu -->
+            <div class="item"> 
+                <div class="statusDisplayRecords">
+                    <table>
+                        <tr><td><span class="good">Target account number:</span></td><!--<td><span class="average">{{:data.target_account_number}}</span></td>-->
+                        <td><div class="itemContent">{{:helper.link(data.target_account_number, null, {'choice' : "target_acc_number"}, null, null)}}</div></td>
+                        <td><div class="itemContent">{{:helper.link('Manifest', null, {'choice' : "Show Manifest"}, null, null)}}</div></td>
+                        <td><div class="itemContent">{{:helper.link('Click', null, {'choice' : "Look for"}, null, null)}}</div></td></tr>
+
+                        <tr><td><span class="good">Funds to transfer($):</span></td><!--<td><span class="average">{{:data.funds_amount}}$</span></td>-->
+                        <td><div class="itemContent">{{:helper.link(data.funds_amount, null, {'choice' : "funds_amount"}, null, null)}}</div></td></tr>
+
+                        <tr><td><span class="good">Transaction purpose:</span></td><!--<td><span class="average">{{:data.purpose}}</span></td>-->
+                        <td><div class="itemContent">{{:helper.link(data.purpose, null, {'choice' : "purpose"}, null, null)}}</div></td></tr>
+                    </table>
+                    <div class="itemContent">{{:helper.link('Transfer funds', 'transferthick-e-w', {'choice' : "make_transfer"}, null, null)}}</div>
+                </div>
+            </div>
+        {{/if}}
+        {{if data.trans_log_spoiler == 1}} <!-- Show Transaction Log -->
+            <div class="item">
+                <div class="statusDisplayRecords">
+                    <center><table class="pmon">
+                        <tr><th>Date</th><th>Time</th><th>Target</th><th>Purpose</th><td>Value($)</th><th>Source</th></tr>
+                        {{for data.trans_log}}
+                            <tr><td>{{:value.data}}</td><td>{{:value.time}}</td><td>{{:value.name}}</td><td>{{:value.purpose}}</td><td>{{:value.amount}}</td><td>{{:value.source}}</td></tr>
+                        {{/for}}
+                    </table></center>
+                </div>
+            </div>
+        {{/if}}
     {{/if}}
 {{else}}
     <div class="wholeScreen">
         <br><br><br><br><br><br><br>No Owner information found, please swipe ID
     </div>
 {{/if}}
-
