Оповещение о транзакции и мелкие правки

--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -1061,7 +1061,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
             <div class="item">
                 <div class="statusDisplayRecords">
                     <center><table class="pmon">
-                        <tr><th>Date</th><th>Time</th><th>Target</th><th>Purpose</th><td>Value($)</th><th>Source</th></tr>
+                        <tr><th>Date</th><th>Time</th><th>Target</th><th>Purpose</th><th>Value</th><th>Source</th></tr>
                         {{for data.trans_log}}
                             <tr><td>{{:value.data}}</td><td>{{:value.time}}</td><td>{{:value.name}}</td><td>{{:value.purpose}}</td><td>{{:value.amount}}</td><td>{{:value.source}}</td></tr>
                         {{/for}}
