--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -1028,6 +1028,8 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
             <H2>Finance Management</H2>
             <div class="itemLabelNarrow"><b>Money:</b></div>
             <div class="itemContent"><span class="good">{{:data.money}}$</span></div>
+            <div class="itemLabelNarrow"><b>Time:</b></div>
+            <div class="itemContent"><span class="white">{{:data.time_to_next_pay}}</span></div>
         </div>
         <div class="item">
             <div class="itemLabelNarrow">
